app/layout/less/base/body.less
.content {
    padding: @verticalRhythm 0;
}

.page-header {
    padding: 0;
    border: 0 none;
    margin: 0 0 @verticalRhythm * 0.8;

    h1,
    h2,
    h3,
    h4,
    h5 {
        margin-bottom: 0;
    }
}


// Default blue link color (investors)

a {
    color: @brandColor;
    text-decoration: none;
}

a:hover, a:focus {
    color: #3f9cd9;
}

// Orange link color (borrower)
.link-borrower {
    .link-color(@borrower);
}

// Orange text (borrower)
.text-orange {
    color: @borrower;
}

// go back arrow on mobile & tablet

@media (min-width: 320px) and (max-width: 991px) {
    .return {

        span {
            width: 1em;
        }

        h1 {
            width: 90%;
        }
    }
}

